fix scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -73,4 +73,8 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  html {
+    scrollbar-gutter: stable;
+  }
 }
